@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="plugin.video.videodevil"
-  version="1.6.9"
+  version="1.7.0"
   name="VideoDevil"
   provider-name="sfaxman / bootsy">
   <requires>
