@@ -22,12 +22,12 @@ director=VideoDevil
 icon=video.devil.image|youjizz.png
 url=youjizz.com.cfg
 ########################################################
-title=GirlfriendVideos
-type=rss
-genre=GirlfriendVideos
-director=VideoDevil
-icon=video.devil.image|gfvideos.png
-url=gfvideos.com.cfg
+#title=GirlfriendVideos
+#type=rss
+#genre=GirlfriendVideos
+#director=VideoDevil
+#icon=video.devil.image|gfvideos.png
+#url=gfvideos.com.cfg
 ########################################################
 title=EPORNER
 type=rss
